# scriptoza

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md
conf/: vbc.conf  vbc.yaml
deprecated/: README.md
docs/: rename_video_refactoring_plan.md
photo/: README.md  convert_hif_to_jpg.py  rename_photo.py
tests/: README.md  conftest.py  test_follow_crop_to_audio.py  test_musescore_export_mp3_with_tags.py  test_vbc.py
utils/: README.md  assign_photos_to_timeline.py  benchmark_semantic_announcement_models.py  build_performance_proxy_index.py  build_performance_timeline.py  claude_usage_report.py  codex_exec_announcement_batch_output_schema.json  codex_exec_announcement_output_schema.json  copy_reviewed_set_assets.py  delete-google-chat-messages.env.example  delete-google-chat-messages.js  demo_bielik_announcement_classifier.py  demo_semantic_announcement_classifier.py  fix_vbc_tags.py  generate_photo_proxy_jpg.py  import_sessions.py  install.py  install_scriptoza.sh  migrate.env.example  migrate.py  musescore_export_mp3_with_tags.py  organize_by_date.py  review_performance_proxy_gui.py  safe_rename_tt.py  scan_mp4_to_json.py  session_stats.sh  statusline.py  transcribe_video_batch_api.py
vbc/: main.py
video/: README.md  check_4k.py  check_collisions.py  find_vbc.py  follow_crop_to_audio.py  rename_video.py  rename_video.yaml  rename_video_by_tags.py  rename_video_univ.py  review_large_mp4.py  sort_dji.py  sort_video_dated.py  sort_video_qvr.sh  sort_video_sr.sh  vbc.py  video_batch_compression.py
(+79 files in other folders)
