[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scriptoza"
version = "0.1.0"
description = "Modular utility scripts including VBC - Video Batch Compression with AV1/NVENC support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pyexiftool>=0.5.6",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.20.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.7",
]

[tool.hatch.build.targets.wheel]
packages = ["vbc"]
